--- a/Lecture 03.ipynb
+++ b/Lecture 03.ipynb
@@ -9,7 +9,7 @@
     "## Matrix Mulplication 矩阵乘法\n",
     "\n",
     "* ### Regular Way (行列内积)\n",
-    "有$m\\times n$矩阵$A$和$n\\times p$矩阵$B$（$A$的总行数必须与$B$的总列数相等），两矩阵相乘有$AB=C$，$C$**是一个$m\\times p$矩阵**，对于$C$矩阵中的第$i$行第$j$列元素$c_{ij}$，有 #### $c_{ij}=row_i\\cdot column_j=\\sum_{k=i}^na_{ik}b_{kj}$\n",
+    "有$m\\times n$矩阵$A$和$n\\times p$矩阵$B$（$A$的总行数必须与$B$的总列数相等），两矩阵相乘有$AB=C$，$C$**是一个$m\\times p$矩阵**，对于$C$矩阵中的第$i$行第$j$列元素$c_{ij}$，有 $#### c_{ij}=row_i\\cdot column_j=\\sum_{k=i}^na_{ik}b_{kj}$\n",
     "\n",
     "* ### Column Way (整列相乘)\n",
     "$\\begin{bmatrix}&&\\\\A_{col1}&A_{col2}&\\cdots&A_{coln}\\\\&&\\end{bmatrix}\\begin{bmatrix}\\cdots&b_{1j}&\\cdots\\\\\\cdots&b_{2j}&\\cdots\\\\\\cdots&\\vdots&\\cdots\\\\\\cdots&b_{nj}&\\cdots\\\\\\end{bmatrix}=\\begin{bmatrix}&&\\\\\\cdots&\\left(b_{1j}A_{col1}+b_{2j}A_{col2}+\\cdots+b_{nj}A_{coln}\\right)&\\cdots\\\\&&\\end{bmatrix}$  ($C$矩阵的第$j$列) \n",
